fix: add z-index

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -422,6 +422,7 @@ html {
   position: absolute;
   top: 50%;
   transform: translateY(-50%);
+  z-index: 2;
 
   display: none;
   justify-content: center;
